objects/IATSPayment__IATS_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the IATS Brickwork application.</description>
    <fields>
        <fullName>IATSPayment__Batch_Contact_Record_Type_ID__c</fullName>
        <label>Batch - Contact Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Batch_Opportunity_Record_Type_ID__c</fullName>
        <label>Batch - Opportunity  Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Batch_Primary_Campaign_Source_ID__c</fullName>
        <label>Batch - Primary Campaign Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Batch_Rec_Donation_Record_Type_ID__c</fullName>
        <label>Batch - Rec. Donation Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Batch_iATS_Merchant_Account_ID__c</fullName>
        <label>Batch - iATS Merchant Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contact_Filter10__c</fullName>
        <label>Contact Filter10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contact_Filter1__c</fullName>
        <label>Contact Filter1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contact_Filter2__c</fullName>
        <label>Contact Filter2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contact_Match_Logic__c</fullName>
        <label>Contact Match Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Contact_Match_Type__c</fullName>
        <label>Contact Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Create_Scheduled_Payment_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Scheduled Payment Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Default_Create_New_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Create New Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Default_Opportunity_Contact_Role__c</fullName>
        <label>Default Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Default_Payment_Entry_Mode__c</fullName>
        <label>Default Credit Card Entry Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Disable_iATS_Transaction_Rollup_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disables iATS Transaction trigger which updates cumulative fields on related iATS Customer Code and Opportunities records that are related to iATS Transactions. Recommended for conflicts with other packages and custom code.</inlineHelpText>
        <label>Disable iATS Transaction Rollup Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Do_Not_Automatically_Create_Opp_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Automatically Create Opp Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Do_Not_Automatically_Fill_Amount_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The amount field on the IATS virtual terminal will automatically populate with the amount of the opportunity (donation) record unless this field is checked. Only applicable for the Opportunity (donation) virtual terminal.</inlineHelpText>
        <label>Do Not Automatically Fill Amount Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Do_Not_Create_Past_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Create Past Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Journal_Download_Batch_Size__c</fullName>
        <label>Journal Download Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Limit_OP__c</fullName>
        <label>Limit (OP)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Nightly_Batch_Download_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Batch Download Transactions</description>
        <inlineHelpText>Receive status notifications via email for scheduled nightly batch transaction downloads. Please note that notifications will always be sent if errors occur during the downloads.</inlineHelpText>
        <label>Nightly Batch Download Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Nonprofit_Starter_Pack_Account_Model__c</fullName>
        <inlineHelpText>If the Nonprofit Starter Pack is installed, which data model is being utilized?</inlineHelpText>
        <label>Nonprofit Starter Pack Account Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Notification_Email__c</fullName>
        <inlineHelpText>Email address to receive Brickwork notifications.</inlineHelpText>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Opportunity_Amount_Population__c</fullName>
        <label>Opportunity Amount Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payment_Accepted_Stage__c</fullName>
        <inlineHelpText>If using a web donation form with Brickwork, this will be the stage that is set if the web donation is approved. This stage will also be used if an offline payment is approved and the &apos;Update Stage if Payment Accepted&apos; field is checked.</inlineHelpText>
        <label>Payment Accepted Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payment_Declined_Stage__c</fullName>
        <inlineHelpText>This stage will be used if an offline payment is declined and the &apos;Update Stage if Payment Declined&apos; field is checked.</inlineHelpText>
        <label>Payment Declined Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Payment_Pending_Stage__c</fullName>
        <label>Payment Pending Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Pre_populate_Virtual_Terminal_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-populate Virtual Terminal Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Rec_Payments_Date_Change_Action_OP__c</fullName>
        <label>Rec. Payments Date Change Action (OP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Rec_Payments_Date_Change_Action_RO__c</fullName>
        <label>Rec. Payments Date Change Action (RO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Recurring_Donation_Model__c</fullName>
        <label>Recurring Donation Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Scheduled_Opportunity_Records_Limit__c</fullName>
        <label>Scheduled Opportunity Records Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Scheduled_Payment_Records_Limit__c</fullName>
        <label>Scheduled Payment Records Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Update_Payments_Written_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the payment &apos;written off&apos; checkbox when a related iATS Transaction is rejected</inlineHelpText>
        <label>Update Payments Written Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Update_Stage_If_Payment_is_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Stage If Payment is Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Update_Stage_if_Payment_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the opportunity stage will automatically update to the value in the &apos;Payment Accepted Stage&apos; field if an offline payment is approved. This is only applicable for opportunity related payments.</inlineHelpText>
        <label>Update Stage if Payment Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Update_Stage_if_Payment_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Opportunity stage will automatically update to the value in the &apos;Payment Declined Stage&apos; field if an offline payment is declined. This is only applicable for opportunity related single payments.</inlineHelpText>
        <label>Update Stage if Payment Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__recurring_Donations_Open_Ended_Status__c</fullName>
        <label>recurring Donations Open Ended Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__recurring_amount_method__c</fullName>
        <label>Recurring Amount Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IATS Brickwork Settings</label>
</CustomObject>